About us and theme

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrotis360 - Dashboard for Farmers</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-primary text-white p-3">
         <div class="container">
-            <h1>Agrotis360</h1>
+            <h1 class="font-weight-bold">Agrotis360</h1>
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
@@ -26,17 +27,17 @@
         </div>
     </header>
     <main class="container mt-4">
-        <section id="overview" class="mb-5">
-            <h2 data-en="Executive Summary" data-el="Εκτελεστική Περίληψη">Executive Summary</h2>
-            <p data-en="Our dashboard for farmers is a comprehensive platform that provides farmers with the tools and information they need to manage their farms more efficiently and effectively..." data-el="Η πλατφόρμα μας για τους αγρότες είναι μια ολοκληρωμένη πλατφόρμα που παρέχει στους αγρότες τα εργαλεία και τις πληροφορίες που χρειάζονται για να διαχειρίζονται τις φάρμες τους πιο αποτελεσματικά και αποδοτικά...">Our dashboard for farmers is a comprehensive platform that provides farmers with the tools and information they need to manage their farms more efficiently and effectively...</p>
+        <section id="about" class="mb-5">
+            <h2 class="font-weight-bold" data-en="About Us" data-el="Σχετικά με εμάς">About Us</h2>
+            <p data-en="Agrotis360 is a leading provider of innovative agricultural solutions designed to help farmers manage their farms more efficiently and effectively. Our comprehensive dashboard offers a range of features including weather forecasts, crop and soil monitoring, inventory management, equipment management, and financial management. With Agrotis360, farmers can make informed decisions, optimize their operations, and maximize their profitability." data-el="Η Agrotis360 είναι ένας κορυφαίος πάροχος καινοτόμων γεωργικών λύσεων που έχουν σχεδιαστεί για να βοηθούν τους αγρότες να διαχειρίζονται τις φάρμες τους πιο αποτελεσματικά και αποδοτικά. Η ολοκληρωμένη πλατφόρμα μας προσφέρει μια σειρά από χαρακτηριστικά, όπως προγνώσεις καιρού, παρακολούθηση καλλιεργειών και εδάφους, διαχείριση αποθεμάτων, διαχείριση εξοπλισμού και διαχείριση οικονομικών. Με την Agrotis360, οι αγρότες μπορούν να λαμβάνουν ενημερωμένες αποφάσεις, να βελτιστοποιούν τις λειτουργίες τους και να μεγιστοποιούν την κερδοφορία τους.">Agrotis360 is a leading provider of innovative agricultural solutions designed to help farmers manage their farms more efficiently and effectively. Our comprehensive dashboard offers a range of features including weather forecasts, crop and soil monitoring, inventory management, equipment management, and financial management. With Agrotis360, farmers can make informed decisions, optimize their operations, and maximize their profitability.</p>
         </section>
         <section id="features" class="mb-5">
-            <h2 data-en="Features" data-el="Χαρακτηριστικά">Features</h2>
+            <h2 class="font-weight-bold" data-en="Features" data-el="Χαρακτηριστικά">Features</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" data-en="Weather forecasts and alerts" data-el="Προγνώσεις και ειδοποιήσεις καιρού">Weather forecasts and alerts</h5>
+                            <h5 class="card-title font-weight-bold" data-en="Weather forecasts and alerts" data-el="Προγνώσεις και ειδοποιήσεις καιρού">Weather forecasts and alerts</h5>
                             <p class="card-text" data-en="Stay updated with the latest weather forecasts and alerts to plan your farming activities." data-el="Μείνετε ενημερωμένοι με τις τελευταίες προγνώσεις και ειδοποιήσεις καιρού για να προγραμματίσετε τις αγροτικές σας δραστηριότητες.">Stay updated with the latest weather forecasts and alerts to plan your farming activities.</p>
                         </div>
                     </div>
@@ -44,7 +45,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" data-en="Crop and soil monitoring" data-el="Παρακολούθηση καλλιεργειών και εδάφους">Crop and soil monitoring</h5>
+                            <h5 class="card-title font-weight-bold" data-en="Crop and soil monitoring" data-el="Παρακολούθηση καλλιεργειών και εδάφους">Crop and soil monitoring</h5>
                             <p class="card-text" data-en="Monitor the health of your crops and soil to ensure optimal growth and yield." data-el="Παρακολουθήστε την υγεία των καλλιεργειών και του εδάφους σας για να εξασφαλίσετε βέλτιστη ανάπτυξη και απόδοση.">Monitor the health of your crops and soil to ensure optimal growth and yield.</p>
                         </div>
                     </div>
@@ -52,7 +53,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" data-en="Inventory management" data-el="Διαχείριση αποθεμάτων">Inventory management</h5>
+                            <h5 class="card-title font-weight-bold" data-en="Inventory management" data-el="Διαχείριση αποθεμάτων">Inventory management</h5>
                             <p class="card-text" data-en="Keep track of your inventory to manage supplies and reduce waste." data-el="Παρακολουθήστε τα αποθέματά σας για να διαχειριστείτε τις προμήθειες και να μειώσετε τα απόβλητα.">Keep track of your inventory to manage supplies and reduce waste.</p>
                         </div>
                     </div>
@@ -60,7 +61,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" data-en="Equipment management" data-el="Διαχείριση εξοπλισμού">Equipment management</h5>
+                            <h5 class="card-title font-weight-bold" data-en="Equipment management" data-el="Διαχείριση εξοπλισμού">Equipment management</h5>
                             <p class="card-text" data-en="Manage your farming equipment to ensure it is always in good working condition." data-el="Διαχειριστείτε τον αγροτικό σας εξοπλισμό για να εξασφαλίσετε ότι είναι πάντα σε καλή κατάσταση λειτουργίας.">Manage your farming equipment to ensure it is always in good working condition.</p>
                         </div>
                     </div>
@@ -68,7 +69,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" data-en="Financial management" data-el="Διαχείριση οικονομικών">Financial management</h5>
+                            <h5 class="card-title font-weight-bold" data-en="Financial management" data-el="Διαχείριση οικονομικών">Financial management</h5>
                             <p class="card-text" data-en="Keep track of your finances to make informed decisions and maximize profitability." data-el="Παρακολουθήστε τα οικονομικά σας για να λαμβάνετε ενημερωμένες αποφάσεις και να μεγιστοποιήσετε την κερδοφορία.">Keep track of your finances to make informed decisions and maximize profitability.</p>
                         </div>
                     </div>
@@ -77,11 +78,11 @@
             </div>
         </section>
         <section id="pricing" class="mb-5">
-            <h2 data-en="Pricing" data-el="Τιμολόγηση">Pricing</h2>
+            <h2 class="font-weight-bold" data-en="Pricing" data-el="Τιμολόγηση">Pricing</h2>
             <p data-en="Our platform is subscription-based, with different pricing plans to suit the needs of different farmers..." data-el="Η πλατφόρμα μας βασίζεται σε συνδρομή, με διαφορετικά σχέδια τιμολόγησης για να καλύψει τις ανάγκες διαφορετικών αγροτών...">Our platform is subscription-based, with different pricing plans to suit the needs of different farmers...</p>
         </section>
         <section id="contact" class="mb-5">
-            <h2 data-en="Contact Us" data-el="Επικοινωνήστε μαζί μας">Contact Us</h2>
+            <h2 class="font-weight-bold" data-en="Contact Us" data-el="Επικοινωνήστε μαζί μας">Contact Us</h2>
             <form>
                 <div class="form-group">
                     <label for="name" data-en="Name:" data-el="Όνομα:">Name:</label>
