--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             </nav>
         </div>
     </header>
+    <section class="hero-section text-center text-white">
+        <div class="container">
+            <h1 class="display-4">Welcome to Agrotis360</h1>
+            <p class="lead">Innovative agricultural solutions for modern farmers</p>
+            <a href="#about" class="btn btn-lg btn-light mt-3">Learn More</a>
+        </div>
+    </section>
     <main class="container mt-4">
         <section id="about" class="mb-5">
             <h2 class="font-weight-bold" data-en="About Us" data-el="Σχετικά με εμάς">About Us</h2>
@@ -40,7 +47,7 @@
             <h2 class="font-weight-bold" data-en="Features" data-el="Χαρακτηριστικά">Features</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card feature-card">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" data-en="Weather forecasts and alerts" data-el="Προγνώσεις και ειδοποιήσεις καιρού">Weather forecasts and alerts</h5>
                             <p class="card-text" data-en="Stay updated with the latest weather forecasts and alerts to plan your farming activities." data-el="Μείνετε ενημερωμένοι με τις τελευταίες προγνώσεις και ειδοποιήσεις καιρού για να προγραμματίσετε τις αγροτικές σας δραστηριότητες.">Stay updated with the latest weather forecasts and alerts to plan your farming activities.</p>
@@ -48,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card feature-card">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" data-en="Crop and soil monitoring" data-el="Παρακολούθηση καλλιεργειών και εδάφους">Crop and soil monitoring</h5>
                             <p class="card-text" data-en="Monitor the health of your crops and soil to ensure optimal growth and yield." data-el="Παρακολουθήστε την υγεία των καλλιεργειών και του εδάφους σας για να εξασφαλίσετε βέλτιστη ανάπτυξη και απόδοση.">Monitor the health of your crops and soil to ensure optimal growth and yield.</p>
@@ -56,7 +63,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card feature-card">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" data-en="Inventory management" data-el="Διαχείριση αποθεμάτων">Inventory management</h5>
                             <p class="card-text" data-en="Keep track of your inventory to manage supplies and reduce waste." data-el="Παρακολουθήστε τα αποθέματά σας για να διαχειριστείτε τις προμήθειες και να μειώσετε τα απόβλητα.">Keep track of your inventory to manage supplies and reduce waste.</p>
@@ -64,7 +71,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card feature-card">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" data-en="Equipment management" data-el="Διαχείριση εξοπλισμού">Equipment management</h5>
                             <p class="card-text" data-en="Manage your farming equipment to ensure it is always in good working condition." data-el="Διαχειριστείτε τον αγροτικό σας εξοπλισμό για να εξασφαλίσετε ότι είναι πάντα σε καλή κατάσταση λειτουργίας.">Manage your farming equipment to ensure it is always in good working condition.</p>
@@ -72,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card feature-card">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" data-en="Financial management" data-el="Διαχείριση οικονομικών">Financial management</h5>
                             <p class="card-text" data-en="Keep track of your finances to make informed decisions and maximize profitability." data-el="Παρακολουθήστε τα οικονομικά σας για να λαμβάνετε ενημερωμένες αποφάσεις και να μεγιστοποιήσετε την κερδοφορία.">Keep track of your finances to make informed decisions and maximize profitability.</p>
