--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./logo.png" alt="GaiaLogica Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#home">Αρχική</a></li>
+                <li><a href="#">Αρχική</a></li>
                 <li><a href="#services">Υπηρεσίες</a></li>
                 <li><a href="#pricing">Τιμολόγηση</a></li>
                 <li><a href="#contact">Επικοινωνία</a></li>
