--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ document.querySelectorAll(".faq-answer").forEach(answer => { answer.style.displa
           <p data-lang="en" style="display: none">
             <strong>📞 Phone:</strong> +30 210 123 4567
           </p> -->
-                    <p data-lang="el"></p>
+                    <p data-lang="el">
                     <strong>✉ Email:</strong>
                     <a href="mailto:info@gaialogica.gr">info@gaialogica.gr</a>
                 </p>
